--- a/gulimall-product/src/main/resources/templates/item.html
+++ b/gulimall-product/src/main/resources/templates/item.html
@@ -59,8 +59,26 @@
 							</li>
 						</ul>
 						<ul class="header_ul_right">
-							<li style="border: 0;"><a href="/static/item/../登录页面\index.html" class="aa">你好，请登录</a></li>
-							<li><a href="/static/item/../注册页面\index.html" style="color: red;">免费注册</a> |</li>
+							<li>
+								<a th:if="${session.loginUser == null}"
+								   href="http://auth.gulimall.com/login.html">
+									你好，请登录
+								</a>
+								<a th:if="${session.loginUser != null}">
+									你好，[[${session.loginUser.nickname}]]
+								</a>
+							</li>
+
+							<li>
+								<a th:if="${session.loginUser == null}"
+								   href="http://auth.gulimall.com/reg.html"
+								   class="li_2">
+									免费注册
+								</a>
+								<span th:if="${session.loginUser != null}" class="li_2 disabled">
+								   已注册
+								</span>
+							</li>
 							<li><a href="/static/item/javascript:;" class="aa">我的订单</a> |</li>
 							<li class="jingdong"><a href="/static/item/javascript:;">我的京东</a><span class="glyphicon glyphicon-menu-down">|</span>
 								<ol class="jingdong_ol">
