--- a/gulimall-product/src/main/resources/templates/item.html
+++ b/gulimall-product/src/main/resources/templates/item.html
@@ -629,7 +629,7 @@
 
 						<div class="box-btns clear">
 							<div class="box-btns-one">
-								<input type="text" name="" id="" value="1" />
+								<input type="text" name="" id="numInput" value="1" />
 								<div class="box-btns-one1">
 
 									<div>
@@ -642,12 +642,11 @@
 										-
 									</button>
 									</div>
-
 								</div>
 							</div>
 							<div class="box-btns-two">
-								<a href="/static/item/../商品分类\index.html">
-									立即预约
+								<a href="#" id="addToCartA" th:attr="skuId=${item.skuInfo.skuId}">
+									加入购物车
 								</a>
 							</div>
 							<div class="box-btns-three">
@@ -1346,6 +1345,15 @@
 		$(".sku_attr_value").parent().css({"border":"solid 1px #CCC"});
 		$("a[class='sku_attr_value checked']").css({"border":"solid 1px red"});
 	})
+
+	$("#addToCartA").click(function () {
+		var num = $("#numInput").val();
+		var skuId = $(this).attr("skuId");
+		location.href="http://cart.gulimall.com/addToCart?skuId=" + skuId + "&num=" + num;
+		return false;
+	})
+
+
 </script>
 
 </html>
